--- a/VECTO/My Project/Resources.resx
+++ b/VECTO/My Project/Resources.resx
@@ -208,4 +208,19 @@
   <data name="Refresh_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Refresh-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="application_add_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\application-add-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="F_Graph" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\F_Graph.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="F_ENG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\F_ENG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="F_GBX" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\F_GBX.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="F_VEH" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\F_VEH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
